# agentd

./: .gitignore  .rustfmt.toml  ARCHITECTURE.md  Cargo.toml  Makefile  README.md  ROADMAP.md  mockup.sh
.cargo/: config.toml
crates/agent/: Cargo.toml
crates/agent-cli/: Cargo.toml
crates/agent-cli/src/: local.rs  main.rs  runtime.rs  session_display.rs  tui.rs
crates/agent/src/: local.rs  main.rs
crates/agentctl/: Cargo.toml
crates/agentctl/src/: local.rs  main.rs
crates/agentd/: Cargo.toml  build.rs
crates/agentd-shared/: Cargo.toml
crates/agentd-shared/src/: config.rs  event.rs  header.rs  lib.rs  paths.rs  protocol.rs  request_input.rs  session.rs  sqlite_schema.rs
crates/agentd/src/: app.rs  codex.rs  codex_json.rs  db.rs  git.rs  ids.rs  main.rs  server.rs  session_worker.rs  terminal_state.rs
scripts/: bootstrap-ghostty.sh
