[workspace]
members = [
    "crates/agentd-shared",
    "crates/agentd",
    "crates/agent",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
camino = { version = "1.1", features = ["serde1"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
dirs = "6.0"
futures = "0.3"
nix = { version = "0.30", features = ["signal"] }
portable-pty = "0.9"
rand = "0.9"
rusqlite = { version = "0.37", features = ["bundled", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slug = "0.1"
thiserror = "2.0"
tokio = { version = "1.48", features = ["full"] }
toml = "0.9"
uuid = { version = "1.18", features = ["v4"] }
