[package]
name = "agent-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "agent"
path = "src/main.rs"

[dependencies]
agentd-shared = { path = "../agentd-shared" }
anyhow.workspace = true
camino.workspace = true
chrono.workspace = true
clap.workspace = true
crossterm = { workspace = true, features = ["event-stream"] }
futures.workspace = true
libc.workspace = true
nix.workspace = true
ratatui.workspace = true
rusqlite.workspace = true
serde_json.workspace = true
tokio.workspace = true
