[package]
name = "agentctl"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
agentd-shared = { path = "../agentd-shared" }
anyhow.workspace = true
clap.workspace = true
crossterm.workspace = true
nix.workspace = true
serde_json.workspace = true
tokio.workspace = true
