[package]
name = "agentd-shared"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
camino.workspace = true
chrono.workspace = true
dirs.workspace = true
nix.workspace = true
serde.workspace = true
serde_json.workspace = true
slug.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
