[package]
name = "agentd"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
agentd-shared = { path = "../agentd-shared" }
anyhow.workspace = true
camino.workspace = true
chrono.workspace = true
clap.workspace = true
nix.workspace = true
portable-pty.workspace = true
rand.workspace = true
rusqlite.workspace = true
serde_json.workspace = true
tokio.workspace = true
